k8s-config/category-service-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category-service
  template:
    metadata:
      labels:
        app: category-service
    spec:
      containers:
      - name: category-service
        image: stumpfalexdockerka/hska-vis-legacy-category-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: category-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: category-service
