k8s-config/legacy-webshop-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacywebshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legacywebshop
  template:
    metadata:
      labels:
        app: legacywebshop
    spec:
      containers:
      - name: legacywebshop
        image: stumpfalexdockerka/hska-vis-legacy-legacywebshop:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: legacywebshop
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8080
  selector:
    app: legacywebshop
