k8s-config/product-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: stumpfalexdockerka/hska-vis-legacy-product-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  ports:
    - port: 8080  # Externer Port, den der Service innerhalb des Clusters anbietet
      targetPort: 8080  # Der Port des Containers
  selector:
    app: product-service
