k8s-config/ingress-ressources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-gateway
spec:
  rules:
  - http:
      paths:
      - path: /products/
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /categories/
        pathType: Prefix
        backend:
          service:
            name: category-service
            port:
              number: 8080
